<resources>
    <string name="app_name">Uda_Project0</string>
    <string name="action_settings">Settings</string>
    <string name="SPOTIFY_STREAMER">SPOTIFY STREAMER</string>
    <string name="SCORES_APP">SCORES APP</string>
    <string name="LIBRARY_APP">LIBRARY APP</string>
    <string name="BUILD_IT_BIGGER">BUILD IT BIGGER</string>
    <string name="BACON_READER">BACON READER</string>
    <string name="CAPSTONE">CAPSTONE: MY OWN APP</string>
    <string name="mainview_title">My Nonodegree Apps!</string>
</resources>
