<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.softsolu.uda_project0.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@color/colorBackround">

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            android:layout_marginRight="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp">
         <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/SPOTIFY_STREAMER"
                android:id="@+id/btnSpotifyStreamer"
                android:background="@color/btnBackround"
                android:textColor="@color/btnTextColor"
                android:layout_margin="10dp"
                android:clickable="true"
                android:onClick="btn_SpotifyStreamer_OnClick" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/SCORES_APP"
                android:id="@+id/btnScoresApp"
                android:background="@color/btnBackround"
                android:textColor="@color/btnTextColor"
                android:layout_margin="10dp"
                android:clickable="true"
            android:onClick="btnScoresApp_OnClick"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/LIBRARY_APP"
                android:id="@+id/btnLibraryApp"
                android:background="@color/btnBackround"
                android:textColor="@color/btnTextColor"
                android:clickable="true"
                android:layout_margin="10dp"
                android:onClick="btnLibraryApp_OnClick" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/BUILD_IT_BIGGER"
                android:id="@+id/btnBuildItBigger"
                android:background="@color/btnBackround"
                android:textColor="@color/btnTextColor"
                android:clickable="true"
                android:layout_margin="10dp"
                android:onClick="btnBuildItBigger_OnClick" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/BACON_READER"
                android:id="@+id/btnBaconReader"
                android:background="@color/btnBackround"
                android:textColor="@color/btnTextColor"
                android:clickable="true"
                android:layout_margin="10dp"
                android:onClick="btnBaconReaderApp_OnClick" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/CAPSTONE"
                android:id="@+id/btnCapstoneMyOwnApp"
                android:background="@color/btnBackround"
                android:textColor="@color/btnTextColor"
                android:clickable="true"
                android:layout_margin="10dp"
                android:layout_marginBottom="201dp"
                android:onClick="btnCapstoneApp_OnClick" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mainview_title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25sp" />

</RelativeLayout>
